# rust-simple-restapi-template

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flyway.conf  rustfmt.toml
http/: auth.http  health.http  user.http
migrations/: V001__create_users.sql
src/: lib.rs  main.rs  schema.rs
src/bootstrap/: mod.rs
src/common/: mod.rs
src/config/: mod.rs
src/core/: app.rs  app_state.rs  config.rs  error.rs  logging.rs  mod.rs  request_context.rs  response.rs  telemetry.rs
src/infra/: mod.rs
src/infra/diesel/: connection.rs  mod.rs
src/infra/valkey/: connection.rs  mod.rs  token_store.rs
src/modules/: mod.rs
src/modules/auth/: controller.rs  domain.rs  extractor.rs  guard.rs  mod.rs  password.rs  service.rs  token.rs
src/modules/health/: controller.rs
src/modules/user/: controller.rs  domain.rs  mod.rs  repository.rs  service.rs
